--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TypeJava</title>
+<style>
+h1 {text-align: center;}
+</style>
+<title>Bioactive</title>
+<link type="text/css" rel="stylesheet" href="css/biocss.css"/>
 </head>
 <body>
-    <h1>Welcome!</h1>
+<h1>Pro Minecraft Tips</h1>
 </body>
-</html>
