--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <style>
 h1 {text-align: center;}
 </style>
-<title>Bioactive</title>
+<title>Project overview</title>
 <link type="text/css" rel="stylesheet" href="css/biocss.css"/>
 </head>
 <body>
-<h1>Pro Minecraft Tips</h1>
+<h1>Project Overview</h1>
 </body>
